# epsx

./: .docker-tag  .dockerignore  .editorconfig  .env.cloud-run  .env.defaults  .env.docker.example  .env.example  .env.prod.example  .env.shared  .env.shared.development  .env.shared.example  .env.shared.production  .env.shared.staging  .fresh-build-manifest  .gitignore  .gitlab-ci.yml  .mcp.json  .npmrc  .prettierrc.yml  .sops.yaml  .vercelignore  ADMIN_ROUTES_WIRED.md  AGENTS.md  API_ENDPOINT_MAPPING.md  BACKEND_API_IMPLEMENTATION.md  CLAUDE.md  CREDIT_WALLET_IMPLEMENTATION.md  CRUSH.md  Cargo.toml  DOCKER-TRAEFIK-SETUP.md  Dockerfile.backend  Dockerfile.frontend  E2E-TEST-COVERAGE-GUIDE.md  FIREBASE-ERROR-DIAGNOSIS.md  FIREBASE_AUTH_FIX.md  GEMINI.md  GOOGLE_CLOUD_SETUP.md  IMPORT_OPTIMIZATION_GUIDE.md  INTEGRATION_TEST_SUMMARY.md  MIGRATION-STATUS.md  (+75 more)
apps/admin/: Cargo.toml  Dockerfile  build.rs  package.json  postcss.config.cjs
apps/admin/src/: auth.rs  legacy.rs  main.rs  ssr.rs
apps/analytics/: Cargo.toml  Dockerfile  build.rs
apps/analytics/src/: grpc_client.rs  lib.rs  main.rs  sse_consumer.rs
apps/backend/: .backend-image  .backend-latest  .dockerignore  .env.example  .env.production.example  .env.production.template  .gitignore  .vercelignore  AUTHENTICATION_DEBUG_REPORT.md  Cargo.toml  Dockerfile  Dockerfile.monorepo  Dockerfile.production  Dockerfile.serverless  Dockerfile.standalone  Makefile  README.md  USER_MANAGEMENT_COMPLETE_REPORT.md  add_test_notifications.sql  add_test_notifications_cast.sql  add_test_notifications_final.sql  add_test_notifications_fixed.sql  add_web3_tables.sql  askama.toml  build.sh  casbin_model.conf  cleanup-port.sh  debug_user_permissions.sql  deploy.sh  diesel.toml  diesel_analytics.toml  diesel_notifications.toml  diesel_payments.toml  fix_imports.sh  fix_syntax.sh  grant_admin_permissions.sql  grant_wallet_admin_permissions.sql  grant_wallet_admin_permissions_fixed.sql  grant_wallet_admin_simple.sql  nohup.out  (+18 more)
apps/backend/.cargo/: config.toml
apps/backend/.claude/: settings.local.json
apps/backend/.sqlx/: query-16ea1a318a8b1247695ff86034a06357c166d4553e7ca7c5280e0471f0b3ad1c.json  query-801d09654c94b2eb208aedb47657d6425a76c55eceda733bed0c4dbdd9eaa936.json  query-a929eea48d5dc56b87274fa266ae0809102a9ab4485efb9ce2799238df6de980.json  query-adbaf970afcbac196660461be95418a6bce6751d3c361ee91a7a44be3ae763d0.json
apps/backend/__test__/: integration_ddd_migration.rs  integration_ddd_simple.rs  integration_embedded_permissions.rs  integration_permission_api_endpoints.rs
apps/backend/api/: epsx_vercel.rs  index.rs
apps/backend/benches/: casbin_performance_benchmarks.rs
apps/backend/database/: README.md  schema.sql  seed_data_only.sql  seed_initial.sql  simple_schema.sql
apps/backend/docker/: Dockerfile.production  docker-compose.production.yml
apps/backend/docs/: API_REFERENCE.md  CASBIN_MIGRATION_GUIDE.md  CONFIGURATION.md  DATABASE_CLEANUP_SUMMARY.md  DATABASE_SCHEMA.md  NEW_SERVICES.md  auth_flow.md  embedded-timestamp-permissions-api.md  notification-modernization-summary.md  notification-monitoring.md  optimization-guide.md  redis-notification-system.md  web3_system_summary.md
apps/backend/migrations/: 0009_create_casbin_policy_tables.sql  000_initial_schema.sql  001_basic_schema.sql  001_consolidated_schema.down.sql  001_consolidated_schema.up.sql  001_initial_schema.sql  001_notification_indexes.sql  002_create_sessions_table.sql  002_enhanced_access_control.sql  002_fix_existing_schema_to_consolidated.sql  002_module_system_migration.sql  002_normalize_schema.sql  002_seed_data.sql  003_add_role_to_users.sql  003_auth_performance_optimization.sql  003_auth_trigger_system.sql  003_firebase_sessions_table.sql  003_optimize_indexes.sql  004_add_client_ip_to_audit_logs.sql  004_create_dynamic_group_system.sql.SKIP  004_create_permission_groups_system.sql  004_partition_tables.sql  004_rate_limiting_tables.sql  005_comprehensive_rate_limiting.sql  005_create_web3_group_bridge_tables.sql  005_read_model_optimization.sql  005_security_events_table.sql  006_add_search_indexes.sql  006_add_user_role_and_seed_test_data.sql  006_migrate_oidc_users_to_web3_groups.sql  006_saga_pattern.sql  007_cleanup_legacy_auth_tables.sql  007_enhance_security_events_with_threat_intelligence.sql  007_pay_per_use_billing.sql  007_web3_authentication_system.sql  008_blockchain_payments.sql  008_casbin_tables.sql  008_performance_monitoring_tables.sql  008_remove_unrelated_legacy_tables.sql  008_stateless_notifications.sql  (+50 more)
apps/backend/migrations_backup/: 0010_create_notifications_table.sql  0011_create_temporary_permissions_table.sql  002_add_actor_id_to_audit_logs.sql  003_add_role_to_users.sql  004_add_iam_tables.sql  005_module_system_migration.sql  006_data_migration_profiles_to_modules.sql  007_create_missing_table_and_fix_types.sql  013_multi_provider_auth.sql  016_granular_admin_modules.sql  017_remove_legacy_roles_complete.sql  018_fix_admin_module_assignment.sql  019_extend_session_token_length.sql  020_remove_casbin_tables.sql  021_simplify_auth_schema.sql  023_backup_data_before_cleanup.sql  024_remove_complex_module_system.sql  025_remove_legacy_permission_system.sql  026_cleanup_redundant_fields.sql
apps/backend/monitoring/: casbin_rules.yml  prometheus.yml
apps/backend/scripts/: README.md  build-optimized.sh  check-env.sh  ci-performance-tests.sh  create_databases.sh  deploy_permission_refactoring.sh  grant_full_access.sh  inspect_database.sql  load-test-processor.js  load-test.yml  migrate.sh  migrate_all.sh  migrate_unified_permissions.sh  monitor_permission_performance.sh  performance-monitor.js  promote_jesadakorn.sh  rollback_permission_refactoring.sh  run.sh  validate-config.sh  (+3 more)
apps/pay/: Cargo.toml  Dockerfile
apps/preview/: Cargo.toml
services/analytics/: Cargo.toml
services/content/: Cargo.toml
services/gateway/: Cargo.toml
services/identity/: Cargo.toml
services/indexer/: Cargo.toml
services/notification/: Cargo.toml
services/pay/: Cargo.toml  Dockerfile
services/subscription/: Cargo.toml
(+7045 files in other folders)
