[package]
name = "epsx-admin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bff-admin"
path = "src/main.rs"

[dependencies]
epsx-kernel = { path = "../../shared/rust/kernel" }
epsx-client = { path = "../../shared/rust/client" }
epsx-auth = { path = "../../shared/rust/auth" }
epsx-crypto = { path = "../../shared/rust/crypto" }
epsx-observability = { path = "../../shared/rust/observability" }
epsx-templates = { path = "../../shared/rust/templates" }
epsx-dioxus-ui = { path = "../../shared/rust/dioxus_ui" }
epsx-bff = { path = "../../shared/rust/bff" }
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
dioxus-server = { workspace = true }
dioxus-web = { workspace = true }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "fs", "cors"] }

[features]
default = ["ssr"]
ssr = []
