[package]
name = "epsx"
version = "0.1.0"
edition = "2021"
default-run = "epsx"
license = "MIT OR Apache-2.0"
description = "EPSX trading platform backend with clean architecture"
authors = ["EPSX Team"]
repository = "https://github.com/your-org/epsx"
keywords = ["trading", "finance", "api", "backend"]
categories = ["web-programming"]

[[bin]]
name = "epsx"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
required-features = ["cli-tools"]

[[bin]]
name = "grant_wallet_permission"
path = "src/bin/grant_wallet_permission.rs"
required-features = ["cli-tools"]

[[bin]]
name = "test_docs"
path = "src/bin/test_docs.rs"

[[bin]]
name = "serverless_handler"
path = "src/bin/serverless_handler.rs"
required-features = ["serverless"]

# Removed: fcm_cleanup binary - will be re-implemented




# Feature flags optimized for production
[features]
default = ["production"]

# Core component features
websockets = ["dep:tokio-tungstenite", "dep:futures-util"]
database = []
postgres = ["database"]
cache = ["dep:redis"]
auth = ["jwt", "crypto", "dep:sha2"]
jwt = ["dep:jsonwebtoken", "dep:hmac", "dep:sha2"]
crypto = ["dep:argon2", "dep:aes-gcm", "dep:ring"]
http-client = ["dep:reqwest", "tls-rustls"]
templates = ["dep:askama", "dep:askama_axum"]
serverless = ["cache", "auth", "postgres"]

# TLS implementation (rustls only for production)
tls-rustls = ["reqwest?/rustls-tls"]

# Build configurations
production = ["postgres", "cache", "auth", "websockets", "templates", "http-client"]
cli-tools = ["dep:clap", "database"]

[dependencies]
# Core server dependencies (always required)
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = "0.9"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
hex = "0.4"
http = "1.0"
# hyper = "1.1" # Removed - axum handles HTTP functionality
lazy_static = "1.4"
base64 = "0.22"
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "timeout", "limit"] }
# tower-service = "0.3" # Removed - tower provides needed functionality
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-retry = "0.3"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
regex = "1.10"
ipnetwork = "0.20"
once_cell = "1.19"
rand = "0.8"
num_cpus = "1.16"
dashmap = "6.0"
md5 = "0.7"

# Optional WebSocket support
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"], optional = true }

# Optional authentication and security
hmac = { version = "0.12", optional = true }
jsonwebtoken = { version = "9.2", optional = true }
ring = { version = "0.17", optional = true }
sha2 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
aes-gcm = { version = "0.10", optional = true }

# RSA dependencies - needed for key management and JWT operations
rsa = "0.9"

# Web3 and Ethereum dependencies
ethers = "2.0"
siwe = "0.6"
alloy = { version = "0.3", features = ["provider-http", "signers", "rpc-types"] }
time = { version = "0.3", features = ["serde", "macros"] }

# Optional HTTP client with TLS choice
reqwest = { version = "0.11", features = ["json"], optional = true, default-features = false }

# TLS support for PostgreSQL connections - use native-tls for better compatibility  
native-tls = "0.2"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"

# Optional CLI tools
clap = { version = "4.4", features = ["derive"], optional = true }

# API documentation (always available)
utoipa = { version = "5.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "4.0", features = ["axum"] }

# Input validation
validator = { version = "0.18", features = ["derive"] }

# System monitoring - removed unused dependency

# Optional template engine
askama = { version = "0.12", optional = true }
askama_axum = { version = "0.4", optional = true }

# Optional Redis cache
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"], optional = true }

# Database access with SQLx - Cloud Run native async database driver
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
# SQLx provides native async PostgreSQL access optimized for Cloud Run environments
# Eliminates bb8/deadpool connection pool complexity with built-in async connection management

# Removed unused dependencies: jemallocator, cargo-bloat


[dev-dependencies]
mockall = "0.12"
uuid = { version = "1.7", features = ["v4", "serde"] }
axum-test = "15.0"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"
# tokio-postgres moved to main dependencies for TLS support

# Clean Architecture Test Configuration removed - using default tests/ directory

# Performance Benchmark Tests

# Profile configurations for binary size optimization
[profile.dev]
# Development build (faster compilation, larger binary)
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
# Production build (balanced optimization)
opt-level = 3
debug = false
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
overflow-checks = false
incremental = false

[profile.release-small]
# Ultra-optimized for minimal binary size (production containers)
inherits = "release"
opt-level = "z"          # Optimize for size over speed
lto = "fat"             # Full link-time optimization (aggressive)
panic = "abort"         # Remove panic unwinding code (saves ~10-20%)
strip = "symbols"       # Remove all debug symbols
codegen-units = 1       # Single compilation unit for best optimization
overflow-checks = false # Disable runtime overflow checks
incremental = false     # Disable incremental compilation for size
rpath = false          # Don't include rpath (container-friendly)

[profile.release-fast]
# Optimized for maximum performance
inherits = "release"
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1


