[package]
name = "epsx"
version = "0.1.0"
edition = "2021"
default-run = "epsx"
license = "MIT OR Apache-2.0"
description = "EPSX trading platform backend with clean architecture"
authors = ["EPSX Team"]
repository = "https://github.com/your-org/epsx"
keywords = ["trading", "finance", "api", "backend"]
categories = ["web-programming"]

[[bin]]
name = "epsx"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
required-features = ["cli-tools"]

[[bin]]
name = "grant_wallet_permission"
path = "src/bin/grant_wallet_permission.rs"
required-features = ["cli-tools"]

[[bin]]
name = "test_docs"
path = "src/bin/test_docs.rs"

[[bin]]
name = "serverless_handler"
path = "src/bin/serverless_handler.rs"
required-features = ["serverless"]

# Removed: fcm_cleanup binary - will be re-implemented




# Feature flags optimized for production
[features]
default = ["production"]

# Core component features
websockets = ["dep:tokio-tungstenite", "dep:futures-util"]
database = []
postgres = ["database"]
auth = ["jwt", "dep:sha2"]
jwt = ["dep:jsonwebtoken", "dep:sha2"]
http-client = ["dep:reqwest", "tls-rustls"]
cache = ["dep:redis"]  # CQRS event bus via Redis Streams
serverless = ["auth", "postgres"]

# TLS implementation (rustls only for production)
tls-rustls = ["reqwest?/rustls-tls"]

# Build configurations
production = ["postgres", "cache", "auth", "websockets", "http-client"]
cli-tools = ["dep:clap", "database"]

[dependencies]
# Core server dependencies (always required)
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
# axum-extra removed - not used
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
hex = "0.4"
http = "1.0"
# hyper = "1.1" # Removed - axum handles HTTP functionality
lazy_static = "1.4"
base64 = "0.22"
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "timeout", "limit"] }
# tower-service = "0.3" # Removed - tower provides needed functionality
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-retry = "0.3"
url = "2.5"
uuid = { version = "1.7", features = ["v4", "v5", "serde"] }
regex = "1.10"
once_cell = "1.19"
rand = "0.8"
dashmap = "6.0"
md5 = "0.7"  # Used in key_management for fingerprinting

# Optional WebSocket support
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"], optional = true }

# Optional authentication and security
jsonwebtoken = { version = "9.2", optional = true }
sha2 = { version = "0.10", optional = true }
# Removed unused crypto: hmac, ring, argon2, aes-gcm

# RSA dependencies - needed for key management and JWT operations
rsa = "0.9"

# Web3 and Ethereum dependencies
ethers = "2.0"
siwe = "0.6"
# Removed alloy (using ethers) and time (using chrono)

# Optional HTTP client with TLS choice
reqwest = { version = "0.11", features = ["json"], optional = true, default-features = false }

# Optional Redis for CQRS event bus (EventDispatcher and ProjectionManager)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# PostgreSQL TLS removed - SQLx handles TLS internally with rustls

# Optional CLI tools
clap = { version = "4.4", features = ["derive"], optional = true }

# API documentation (always available)
utoipa = { version = "5.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-redoc = { version = "5.0", features = ["axum"] }

# Input validation
validator = { version = "0.18", features = ["derive"] }

# System monitoring - removed unused dependency

# Template engine removed - not used
# Redis cache removed - not implemented

# Database access with SQLx - Cloud Run native async database driver
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
# SQLx provides native async PostgreSQL access optimized for Cloud Run environments
# Eliminates bb8/deadpool connection pool complexity with built-in async connection management

# Removed unused dependencies: jemallocator, cargo-bloat


[dev-dependencies]
# mockall, criterion, tempfile removed - not used
uuid = { version = "1.7", features = ["v4", "serde"] }
axum-test = "15.0"
tokio-test = "0.4"

# Clean Architecture Test Configuration removed - using default tests/ directory

# Performance Benchmark Tests

# Profile configurations for binary size optimization
[profile.dev]
# Development build (faster compilation, larger binary)
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
# Production build (balanced optimization)
opt-level = 3
debug = false
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
overflow-checks = false
incremental = false

[profile.release-small]
# Ultra-optimized for minimal binary size (production containers)
inherits = "release"
opt-level = "z"          # Optimize for size over speed
lto = "fat"             # Full link-time optimization (aggressive)
panic = "abort"         # Remove panic unwinding code (saves ~10-20%)
strip = "symbols"       # Remove all debug symbols
codegen-units = 1       # Single compilation unit for best optimization
overflow-checks = false # Disable runtime overflow checks
incremental = false     # Disable incremental compilation for size
rpath = false          # Don't include rpath (container-friendly)

[profile.release-fast]
# Optimized for maximum performance
inherits = "release"
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1

