[package]
name = "epsx-analytics"
version.workspace = true
edition.workspace = true

[[bin]]
name = "analytics"
path = "src/main.rs"

[dependencies]
epsx-kernel = { path = "../../shared/rust/kernel" }
epsx-config = { path = "../../shared/rust/config" }
epsx-database = { path = "../../shared/rust/database" }
epsx-events = { path = "../../shared/rust/events" }
epsx-observability = { path = "../../shared/rust/observability" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
