[package]
name = "websocket-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
reqwest = { version = "0.11" }
url = "2.5"
chrono = "0.4"
strsim = "0.10"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
