[package]
name = "epsx-frontend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bff-frontend"
path = "src/main.rs"

[dependencies]
epsx-kernel = { path = "../../shared/kernel" }
epsx-client = { path = "../../shared/client" }
epsx-auth = { path = "../../shared/auth" }
epsx-crypto = { path = "../../shared/crypto" }
epsx-observability = { path = "../../shared/observability" }
epsx-templates = { path = "../../shared/templates" }
epsx-renderer = { path = "../../shared/renderer" }
epsx-dioxus-ui = { path = "../../shared/dioxus_ui" }
epsx-bff = { path = "../../shared/bff" }
dioxus = { workspace = true }
dioxus-ssr = { workspace = true }
dioxus-web = { workspace = true }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
http = { workspace = true }
hex.workspace = true
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "fs", "cors"] }

[features]
default = ["ssr"]
ssr = []
web = []
