[package]
name = "epsx-preview"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bff-preview"
path = "src/main.rs"

[dependencies]
epsx-kernel = { path = "../../shared/kernel" }
epsx-client = { path = "../../shared/client" }
epsx-observability = { path = "../../shared/observability" }
epsx-templates = { path = "../../shared/templates" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[features]
default = ["ssr"]
ssr = []
