[package]
name = "epsx-analytics"
version.workspace = true
edition.workspace = true

[[bin]]
name = "analytics"
path = "src/main.rs"

[dependencies]
epsx-kernel = { path = "../../shared/kernel" }
epsx-config = { path = "../../shared/config" }
epsx-database = { path = "../../shared/database" }
epsx-events = { path = "../../shared/events" }
epsx-observability = { path = "../../shared/observability" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
