[package]
name = "epsx-content"
version.workspace = true
edition.workspace = true

[[bin]]
name = "content"
path = "src/main.rs"

[dependencies]
epsx-kernel = { path = "../../shared/kernel" }
epsx-renderer = { path = "../../shared/renderer" }
epsx-observability = { path = "../../shared/observability" }
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
